name:                bomber
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bomber#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-extensions: LambdaCase
                    , NumDecimals
                    , ScopedTypeVariables
  exposed-modules:     Bomber
  build-depends:       base >= 4.7 && < 5
                     , HsOpenSSL
                     , bytestring
                     , http-client
                     , http-client-openssl
                     , http-client-tls
                     , lens
                     , optparse-applicative
                     , text
  default-language:    Haskell2010

executable bomber
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bomber
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bomber
